<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp"
    android:background="@color/app_bg"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/labelLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="@dimen/_40ssp"
        android:textColor="@color/bottom_nav_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edtMobile"
        android:layout_marginTop="@dimen/_50sdp"
        android:focusable="true"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:maxLength="15"
        android:digits="1234567890+"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  <!--  <EditText
        android:id="@+id/edtPass"
        android:layout_marginTop="@dimen/_10sdp"
        android:focusable="true"
        android:hint="@string/password"
        android:maxLength="6"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtMobile"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="@dimen/_20ssp"
        />

    <TextView
        android:id="@+id/labelDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtSignUp"
        android:textSize="@dimen/_15ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSignUp"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textColor="@color/bottom_nav_bg"
       app:layout_constraintStart_toEndOf="@id/labelDontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>