<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    android:background="@color/app_bg"
    tools:context=".activity.AddressActivity">

    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/address"
        android:textColor="@color/bottom_nav_bg"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelFullName"
        tools:text="@string/full_name"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelAddress"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/bottom_nav_bg"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


<TextView
    android:id="@+id/txtFullName"
    tools:text="Pratik Dhage"
    android:textSize="@dimen/_15ssp"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:textStyle="italic"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_marginStart="@dimen/_10sdp"
    app:layout_constraintTop_toBottomOf="@id/labelAddress"
    app:layout_constraintStart_toEndOf="@id/labelFullName"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelMobile"
        tools:text="@string/mobile"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelFullName"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/bottom_nav_bg"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txtMobile"
        tools:text="+918652782314"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/txtFullName"
        app:layout_constraintStart_toStartOf="@id/txtFullName"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelAddress_"
        tools:text="@string/address"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelMobile"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/bottom_nav_bg"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelKindly"
        android:text="@string/kindly_mention_complete_address"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/labelMobile"
        app:layout_constraintStart_toStartOf="@id/txtMobile"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtAddress"
        tools:text="Nisarg Greens , Sunflower F, 14/803, Ambernath- East, 421501"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:textStyle="italic"
        android:maxLines="3"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelAddress_"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnProceed"
    android:layout_width="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/_15sdp"
    android:text="@string/proceed_to_checkout"
    android:textAllCaps="false"
    android:textSize="@dimen/_15ssp"
    app:layout_constraintTop_toBottomOf="@id/edtAddress"
    android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>