<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp">

            <!--productCoverImg-->
            <ImageView
                android:id="@+id/ivProductList"
                tools:background="@color/teal_200"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtProductName"
                app:layout_constraintStart_toEndOf="@id/ivProductList"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Product Name"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="@dimen/_13ssp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtProductDescription"
                app:layout_constraintStart_toEndOf="@id/ivProductList"
                app:layout_constraintTop_toBottomOf="@id/txtProductName"
                tools:text="Product Description"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_12ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/LabelProductMRP"
                app:layout_constraintStart_toEndOf="@id/ivProductList"
                app:layout_constraintTop_toBottomOf="@id/txtProductDescription"
                android:text="@string/mrp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtProductMRP"
                app:layout_constraintStart_toEndOf="@id/LabelProductMRP"
                app:layout_constraintTop_toBottomOf="@id/txtProductDescription"
                tools:text="Rs 100"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/LabelProductSP"
                app:layout_constraintStart_toEndOf="@id/txtProductMRP"
                app:layout_constraintTop_toBottomOf="@id/txtProductDescription"
                android:text="@string/sp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtProductSP"
                app:layout_constraintStart_toEndOf="@id/LabelProductSP"
                app:layout_constraintTop_toBottomOf="@id/txtProductDescription"
                tools:text="Rs 500"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/LabelAddToCart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtProductDescription"
                android:text="@string/add_to_cart"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/teal_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>